--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -10,5 +10,67 @@
     <h1>White Chocolate Raspberry Cheesecake</h1>
     <img src="../images/cheesecake.webp" alt="Cheesecake" />
     <h2>Description</h2>
+    <p>
+      This white chocolate raspberry cheesecake is excellent and similar to one
+      you would get in a restaurant. Great for special occasions. Garnish with
+      white chocolate curls if desired.
+    </p>
+    <h2>Ingredients</h2>
+    <h3>Crust:</h3>
+    <ul>
+      <li>1 cup chocolate cookie crumbs</li>
+      <li>¼ cup butter, melted</li>
+      <li>3 tablespoons white sugar</li>
+    </ul>
+    <h3>Sauce:</h3>
+    <ul>
+      <li>1 (10 ounce) package frozen raspberries</li>
+      <li>½ cup water</li>
+      <li>2 tablespoons white sugar</li>
+      <li>2 teaspoons cornstarch</li>
+    </ul>
+    <h3>Cheesecake:</h3>
+    <ul>
+      <li>2 cups white chocolate chips</li>
+      <li>½ cup half-and-half cream</li>
+      <li>3 (8 ounce) packages cream cheese, softened</li>
+      <li>½ cup white sugar</li>
+      <li>3 large eggs</li>
+      <li>1 teaspoon vanilla extract</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Make crust: Mix together cookie crumbs, melted butter, and sugar in a
+        medium bowl. Press mixture into the bottom of a 9-inch springform pan.
+      </li>
+      <li>
+        Make sauce: Combine raspberries, water, sugar, and cornstarch in a
+        saucepan. Bring to a boil and continue boiling until sauce is thick,
+        about 5 minutes. Strain through a mesh strainer to remove seeds.
+      </li>
+      <li>Preheat the oven to 325 degrees F (165 degrees C).</li>
+      <li>
+        Make cheesecake: Melt white chocolate chips with half-and-half in a
+        metal bowl over a pan of simmering water; stir occasionally until
+        smooth.
+      </li>
+      <li>
+        Mix together cream cheese and sugar in a large bowl until smooth. Beat
+        in eggs one at a time. Blend in vanilla and melted white chocolate
+        mixture. Pour 1/2 of the batter over crust. Spoon 3 tablespoons
+        raspberry sauce over batter. Pour remaining cheesecake batter on top.
+        Spoon 3 tablespoons raspberry sauce over batter. Swirl batter with the
+        tip of a knife to create a marbled effect.
+      </li>
+      <li>
+        Bake in the preheated oven until filling is set, 55 to 60 minutes. Cool
+        cheesecake at room temperature, then cover with plastic wrap and
+        refrigerate until thoroughly chilled, 8 hours to overnight.
+      </li>
+      <li>
+        Remove cheesecake from the pan and serve with remaining raspberry sauce.
+      </li>
+    </ol>
   </body>
 </html>
