add some lazy style

--- a/recipes/benedict.html
+++ b/recipes/benedict.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Eggs Benedict</title>
   </head>
   <body>
-    <h1>Eggs Benedict</h1>
+    <h1 class="header">Eggs Benedict</h1>
     <img src="../images/benedict.webp" alt="Eggs Benedict" />
-    <h2>Description</h2>
+    <h2 class="title">Description</h2>
     <p>
       Eggs Benedict is a brunch specialty consisting of hot buttered English
       muffins, Canadian-style bacon, and poached eggs topped with a rich
@@ -20,7 +21,7 @@
       to the best brunch in the world! Delicious with roasted potatoes for
       mopping up the extra egg yolk and Hollandaise.
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="title">Ingredients</h2>
     <h3>Hollandaise Sauce:</h3>
     <ul>
       <li>4 egg yolks</li>
@@ -40,7 +41,7 @@
       <li>4 English muffins, split</li>
       <li>2 tablespoons butter, softened</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="title">Steps</h2>
     <ol>
       <li>
         Make the Hollandaise: Whisk egg yolks, lemon juice, 1 tablespoon of
