--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>White Chocolate Raspberry Cheesecake</title>
   </head>
   <body>
-    <h1>White Chocolate Raspberry Cheesecake</h1>
+    <h1 class="header">White Chocolate Raspberry Cheesecake</h1>
     <img src="../images/cheesecake.webp" alt="Cheesecake" />
-    <h2>Description</h2>
+    <h2 class="title">Description</h2>
     <p>
       This white chocolate raspberry cheesecake is excellent and similar to one
       you would get in a restaurant. Great for special occasions. Garnish with
       white chocolate curls if desired.
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="title">Ingredients</h2>
     <h3>Crust:</h3>
     <ul>
       <li>1 cup chocolate cookie crumbs</li>
@@ -38,7 +39,7 @@
       <li>3 large eggs</li>
       <li>1 teaspoon vanilla extract</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="title">Steps</h2>
     <ol>
       <li>
         Make crust: Mix together cookie crumbs, melted butter, and sugar in a
