--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <img src="./images/home.jpg" style="width: 700px" alt="home pic" />
-    <ul>
-      <li><a href="./recipes/benedict.html">Eggs Benedict</a></li>
-      <li>
+    <h1 class="header">Odin Recipes</h1>
+    <img
+      class="image"
+      src="./images/home.jpg"
+      style="width: 700px"
+      alt="home pic"
+    />
+    <ul class="list">
+      <li class="link"><a href="./recipes/benedict.html">Eggs Benedict</a></li>
+      <li class="link">
         <a href="./recipes/cheesecake.html"
           >White Chocolate Raspberry Cheesecake</a
         >
       </li>
-      <li><a href="./recipes/piccata.html">Lemon Chicken Piccata</a></li>
+      <li class="link">
+        <a href="./recipes/piccata.html">Lemon Chicken Piccata</a>
+      </li>
     </ul>
   </body>
 </html>
