--- a/recipes/piccata.html
+++ b/recipes/piccata.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Lemon Chicken Piccata</title>
   </head>
   <body>
-    <h1>Lemon Chicken Piccata</h1>
+    <h1 class="header">Lemon Chicken Piccata</h1>
     <img src="../images/paccata.webp" alt="Paccata" />
-    <h2>Description</h2>
+    <h2 class="title">Description</h2>
     <p>
       This delicious lemon chicken piccata dish is exquisite and easy to
       prepare. The light and luscious lemon sauce really pops without being too
       acidic; it is simply divine. Serve it with herb-roasted potatoes or
       lemon-rice pilaf.
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="title">Ingredients</h2>
     <ul>
       <li>
         3 large skinless, boneless chicken breast halves - cut into 1/2-inch
@@ -33,7 +34,7 @@
       <li>3 tablespoons butter</li>
       <li>2 tablespoons minced Italian (flat-leaf) parsley</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="title">Steps</h2>
     <ol>
       <li>
         Preheat oven to 200 degrees F (95 degrees C). Place a serving platter
